css/styles.css
/*Colors
blue neutral: #334D5C ;
neutral gray: fff
yellow: #F1C746
red: #DE5948
teal: #43B19C;
orange: #E27C3D*/

#footer{
	width:100%;
	height:10px;
	background: #666;
	margin-top:3%;
}

.ui.menu{
	margin:0;

}

.ui.menu:first-child{
	margin-top: 4rem;
}


.container{
	width:100%;
	display: block;
	margin:auto 0;
}

h1{
font-family: 'Oswald', sans-serif;
font-weight: 700;	
font-weight: 400;
line-height: 1.25em;
font-size: 3.28em; 
text-transform: uppercase;
margin: 0 0 23px 0;
color:#334D5C;
}


h2{
	 font-family: 'Droid Serif', serif;
    font-weight: 400;
    font-style: italic;
    font-size: 1.42em;
    line-height: 1.1em;
    margin: 0 0 23px 0;
}


p {

font-family: 'Droid Serif', serif;
    font-size: 1.05em;
    line-height: 1.em;
    margin: 0 0 23px 0;
}

ul{
	list-style: none;
}

a:link, a:visited {
	color:#DE5948;
}


a:hover, a:active {
  color: #E27C3D;
}


.top{
	background: #43B19C;
	padding:5% 0;

}

.top h1 {
	font-size: 10em;
}

.top h2 {
	padding-bottom: 1em;
}



@media screen and (max-width: 768px) {
	/* #menu is the original menu */
	#menu {
		display:none;
	}
	.slicknav_menu{
		background: #fff;
		margin-bottom: 0;
		position:fixed;
		top:0;
		z-index: 1000;
		width:100%;

	}
}

@media screen and (min-width: 769px) {
	/* #menu is the original menu */
	#menu {
		display:block;
	}
	.slicknav_menu {
	display:none;
	}

}

